# openapydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  TODO.md  data.json  main.py  noxfile.py  openapi-spec.json  pyproject.toml  with-components copy.yaml  without-components.yaml
.github/workflows/: ci.yml
openapydantic/: __init__.py  common.py  openapi_302.py  resolver.py
openapydantic/openapi_302/: __init__.py  models.py
openapydantic/versions/: __init__.py
openapydantic/versions/openapi_302/: __init__.py  models.py
tests/e2e/fixture/: api-unsupported-version.yaml
tests/e2e/v3.0.0/fixture/ok/: oauth2-access-code.yaml
tests/e2e/v3.0.1/fixture/ko/: self-reference.yaml
tests/e2e/v3.0.1/fixture/ok/: self-reference.yaml
tests/e2e/v3.0.2/: test_3_0_2.py
tests/e2e/v3.0.2/fixture/: components_1.json  components_1.yaml  components_3.json  ref-error-unmanaged-file-format.yaml  self-reference.json
tests/e2e/v3.0.2/fixture/ok/: petstore.yaml
tests/integration/: test_openapydantic.py
tests/integration/fixture/: api-no-version.yaml
tests/integration/v3.0.2/: test_3_0_2.py
tests/integration/v3.0.2/fixture/: components_2.yaml  self-reference.yaml
tests/unit/: conftest.py  test_common.py  test_openapydantic.py  test_resolver.py  test_versions.py
tests/unit/v3.0.2/: test_3_0_2.py  test_init.py  test_models.py
tests/unit/v3.0.2/fixture/: components.yaml  components_2.json  components_3.yaml  components_4.json  components_4.yaml  ref-error-invalid-path-format.yaml  simple.json  x-extended.yaml  y-extended.yaml
(+10 files in other folders)
